---
source: tests/trace_solver.rs
info:
  options:
    match_constructor_through_ref: true
    eat_inherited_ref_alone: true
    inherited_ref_on_ref: EatInner
    fallback_to_outer: EatOuter
    allow_ref_pat_on_ref_mut: true
    simplify_deref_mut: true
    downgrade_mut_inside_shared: true
    eat_mut_inside_shared: true
    ref_binding_on_inherited: ResetBindingMode
    mut_binding_on_inherited: Error
  bundle_name: rfc3627
  request: "[&mut ref mut x]: &mut [&T]"
---
let [&mut ref mut x]: &mut [&T] = s
// Applying rule `ConstructorRef`
let &mut ref mut x: &mut &T = &mut (*s).0
// Applying rule `Deref(EatInner, FallbackToOuter(EatOuter))`
let ref mut x: &T = *&mut (*s).0
// Applying rule `BindingBorrow`
let x: &mut &T = &mut *&mut (*s).0
// Applying rule `Binding`
let x: &mut &T = &mut *&mut (*s).0

// Final bindings (simplified):
let x: &mut &T = &mut (*s).0;
